05-kubernetes/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: devops-hub
  namespace: observability

spec:
  selector:
    app: devops-hub

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
